<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scenes.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/logo_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="48dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo1" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/baseline_person_24"
            android:background="@drawable/oval_background"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Hoşgeldiniz"
            android:textSize="12sp"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userName"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="Muhammed Emre Tanrıkulu"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            android:textAlignment="center"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/sifre"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:maxLength="12"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/sifremi_unuttum"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="center"
            android:textColor="@color/greenText" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/sim_bloke_kaldir"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="center"
            android:textColor="@color/greenText" />

    </LinearLayout>

</FrameLayout>
